--- a/ga/binary-ga.ipynb
+++ b/ga/binary-ga.ipynb
@@ -9,92 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Generation 0:\n",
-      "│░████│ Fitness: 15\n",
-      "│░██░█│ Fitness: 14\n",
-      "│░██░█│ Fitness: 14\n",
-      "│░██░█│ Fitness: 14\n",
-      "│░███░│ Fitness: 13\n",
-      "\n",
-      "Generation 10:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 20:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 30:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 40:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 50:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 60:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 70:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 80:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Generation 90:\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "│░████│ Fitness: 15\n",
-      "\n",
-      "Best solution:\n",
-      "│░████│ Fitness: 15\n",
-      "Selected items: [(2, 1), (10, 4), (1, 1), (2, 2)]\n",
-      "Total value: 15\n",
-      "Total weight: 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -103,88 +20,219 @@
     "ITEMS = [(4, 12), (2, 1), (10, 4), (1, 1), (2, 2)]\n",
     "MAX_WEIGHT = 15\n",
     "\n",
-    "# GA parameters\n",
-    "POPULATION_SIZE = 50\n",
-    "GENERATIONS = 100\n",
+    "POPULATION_SIZE = 6  # Smaller population for demonstration\n",
+    "GENERATIONS = 2\n",
     "\n",
     "def create_individual():\n",
+    "    \"\"\"\n",
+    "    Creates a random individual for the knapsack problem.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: A binary list where 1 means the item is selected and 0 means it's not.\n",
+    "          The length of the list is equal to the number of available items.\n",
+    "    \"\"\"\n",
     "    return [random.choice([0, 1]) for _ in range(len(ITEMS))]\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 0, 1]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_individual()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generation 0:\n",
+      "Individual 0: ░░░██ Fitness: 3\n",
+      "Individual 1: █░██░ Fitness: 0\n",
+      "Individual 2: ░░███ Fitness: 13\n",
+      "Individual 3: ██░█░ Fitness: 7\n",
+      "Individual 4: █████ Fitness: 0\n",
+      "Individual 5: █░░░░ Fitness: 4\n",
+      "\n",
+      "Crossover and Mutation:\n",
+      "\n",
+      "Parent 1: ██░█░ Fitness: 7\n",
+      "Parent 2: █████ Fitness: 0\n",
+      "Crossover point: 4\n",
+      "Child 1:  ██░██ Fitness: 0\n",
+      "Mutated: ██░██ Fitness: 0\n",
+      "\n",
+      "Parent 1: █░░░░ Fitness: 4\n",
+      "Parent 2: ██░█░ Fitness: 7\n",
+      "Crossover point: 3\n",
+      "Child 1:  █░░█░ Fitness: 5\n",
+      "Mutated: █░░█░ Fitness: 5\n",
+      "\n",
+      "Parent 1: █░░░░ Fitness: 4\n",
+      "Parent 2: █░██░ Fitness: 0\n",
+      "Crossover point: 2\n",
+      "Child 1:  █░██░ Fitness: 0\n",
+      "Mutated: █░██░ Fitness: 0\n",
+      "\n",
+      "Generation 1:\n",
+      "Individual 0: ██░██ Fitness: 0\n",
+      "Individual 1: ████░ Fitness: 0\n",
+      "Individual 2: █░░█░ Fitness: 5\n",
+      "Individual 3: ██░██ Fitness: 0\n",
+      "Individual 4: █░██░ Fitness: 0\n",
+      "Individual 5: █░░░░ Fitness: 4\n",
+      "\n",
+      "Crossover and Mutation:\n",
+      "\n",
+      "Parent 1: ████░ Fitness: 0\n",
+      "Parent 2: ██░██ Fitness: 0\n",
+      "Crossover point: 4\n",
+      "Child 1:  █████ Fitness: 0\n",
+      "Mutated: █████ Fitness: 0\n",
+      "\n",
+      "Parent 1: █░░░░ Fitness: 4\n",
+      "Parent 2: █░░█░ Fitness: 5\n",
+      "Crossover point: 1\n",
+      "Child 1:  █░░█░ Fitness: 5\n",
+      "Mutated: █░░█░ Fitness: 5\n",
+      "\n",
+      "Parent 1: █░░░░ Fitness: 4\n",
+      "Parent 2: ████░ Fitness: 0\n",
+      "Crossover point: 1\n",
+      "Child 1:  ████░ Fitness: 0\n",
+      "Mutated: ████░ Fitness: 0\n",
+      "\n",
+      "Final Population:\n",
+      "Individual 0: █████ Fitness: 0\n",
+      "Individual 1: ███░░ Fitness: 0\n",
+      "Individual 2: █░░█░ Fitness: 5\n",
+      "Individual 3: █░░░░ Fitness: 4\n",
+      "Individual 4: ████░ Fitness: 0\n",
+      "Individual 5: █░░░░ Fitness: 4\n"
+     ]
+    }
+   ],
+   "source": [
     "def fitness(individual):\n",
+    "    \"\"\"\n",
+    "    Calculates the fitness of an individual.\n",
+    "    \n",
+    "    The fitness is the total value of selected items if the weight constraint\n",
+    "    is satisfied, or 0 if the weight constraint is violated.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): A binary list representing item selection.\n",
+    "    \n",
+    "    Returns:\n",
+    "    int: The total value of selected items, or 0 if weight constraint is violated.\n",
+    "    \"\"\"\n",
     "    total_value = sum(item[0] * bit for item, bit in zip(ITEMS, individual))\n",
     "    total_weight = sum(item[1] * bit for item, bit in zip(ITEMS, individual))\n",
     "    return total_value if total_weight <= MAX_WEIGHT else 0\n",
     "\n",
     "def crossover(parent1, parent2):\n",
+    "    \"\"\"\n",
+    "    Performs single-point crossover between two parents.\n",
+    "    \n",
+    "    Args:\n",
+    "    parent1 (list): First parent's binary representation.\n",
+    "    parent2 (list): Second parent's binary representation.\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: A tuple containing:\n",
+    "           - The child resulting from the crossover (list)\n",
+    "           - The crossover point (int)\n",
+    "    \"\"\"\n",
     "    point = random.randint(1, len(parent1) - 1)\n",
-    "    return parent1[:point] + parent2[point:]\n",
+    "    child = parent1[:point] + parent2[point:]\n",
+    "    return child, point\n",
     "\n",
     "def mutate(individual):\n",
-    "    return [1 - bit if random.random() < 0.01 else bit for bit in individual]\n",
+    "    \"\"\"\n",
+    "    Mutates an individual by randomly flipping bits.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): The binary representation to mutate.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: The mutated individual.\n",
+    "    \"\"\"\n",
+    "    mutated = individual.copy()\n",
+    "    for i in range(len(mutated)):\n",
+    "        if random.random() < 0.1:  # 10% mutation rate for demonstration\n",
+    "            mutated[i] = 1 - mutated[i]\n",
+    "    return mutated\n",
     "\n",
     "def visualize_individual(individual, fitness_value):\n",
     "    \"\"\"\n",
-    "    Create a visual representation of a binary individual.\n",
-    "    \n",
-    "    This function takes a binary individual (a list of 0s and 1s) and its fitness value,\n",
-    "    and returns a string that visually represents the individual.\n",
+    "    Creates a visual representation of an individual.\n",
     "    \n",
     "    Args:\n",
-    "    - individual (list): A list of 0s and 1s representing the individual.\n",
-    "    - fitness_value (int): The fitness value of the individual.\n",
+    "    individual (list): The binary representation of an individual.\n",
+    "    fitness_value (int): The fitness value of the individual.\n",
     "    \n",
     "    Returns:\n",
-    "    - str: A string representation of the individual.\n",
-    "    \n",
-    "    Visual Representation:\n",
-    "    - '│' characters are used to frame the individual.\n",
-    "    - '█' represents a selected item (1 in the binary string).\n",
-    "    - '░' represents an unselected item (0 in the binary string).\n",
-    "    - The fitness value is appended at the end.\n",
-    "    \n",
-    "    Example:\n",
-    "    For individual [1, 0, 1, 0, 1] with fitness 15, the output might be:\n",
-    "    │█░█░█│ Fitness: 15\n",
+    "    str: A string representation where '█' represents a selected item,\n",
+    "         '░' an unselected item, followed by the fitness value.\n",
     "    \"\"\"\n",
-    "    visual = \"│\"\n",
-    "    for bit in individual:\n",
-    "        # Add a filled box for 1 (selected item) or an empty box for 0 (unselected item)\n",
-    "        visual += \"█\" if bit else \"░\"\n",
-    "    visual += f\"│ Fitness: {fitness_value}\"\n",
-    "    return visual\n",
+    "    return \"\".join(\"█\" if bit else \"░\" for bit in individual) + f\" Fitness: {fitness_value}\"\n",
     "\n",
     "def genetic_algorithm():\n",
-    "    # Initialize population\n",
+    "    \"\"\"\n",
+    "    Runs the genetic algorithm for the knapsack problem.\n",
+    "    \n",
+    "    This function initializes a population, evolves it over several generations,\n",
+    "    and prints the state of the population at each step.\n",
+    "    \"\"\"\n",
     "    population = [create_individual() for _ in range(POPULATION_SIZE)]\n",
     "    \n",
     "    for generation in range(GENERATIONS):\n",
-    "        # Sort population by fitness in descending order\n",
-    "        population = sorted(population, key=fitness, reverse=True)\n",
+    "        print(f\"\\nGeneration {generation}:\")\n",
+    "        for i, ind in enumerate(population):\n",
+    "            print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "        \n",
-    "        # Print the top 5 individuals every 10 generations\n",
-    "        if generation % 10 == 0:\n",
-    "            print(f\"\\nGeneration {generation}:\")\n",
-    "            for i in range(5):\n",
-    "                print(visualize_individual(population[i], fitness(population[i])))\n",
+    "        new_population = []\n",
     "        \n",
-    "        # Create new population\n",
-    "        new_population = population[:2]  # Elitism: keep top 2 individuals\n",
-    "        \n",
-    "        while len(new_population) < POPULATION_SIZE:\n",
-    "            # Tournament selection\n",
-    "            parent1, parent2 = random.sample(population[:20], 2)\n",
-    "            child = mutate(crossover(parent1, parent2))\n",
-    "            new_population.append(child)\n",
+    "        print(\"\\nCrossover and Mutation:\")\n",
+    "        for i in range(0, POPULATION_SIZE, 2):\n",
+    "            parent1, parent2 = random.sample(population, 2)\n",
+    "            child1, point1 = crossover(parent1, parent2)\n",
+    "            child2, point2 = crossover(parent2, parent1)\n",
+    "            \n",
+    "            print(f\"\\nParent 1: {visualize_individual(parent1, fitness(parent1))}\")\n",
+    "            print(f\"Parent 2: {visualize_individual(parent2, fitness(parent2))}\")\n",
+    "            print(f\"Crossover point: {point1}\")\n",
+    "            print(f\"Child 1:  {visualize_individual(child1, fitness(child1))}\")\n",
+    "            \n",
+    "            mutated_child1 = mutate(child1)\n",
+    "            print(f\"Mutated: {visualize_individual(mutated_child1, fitness(mutated_child1))}\")\n",
+    "            \n",
+    "            new_population.extend([mutated_child1, mutate(child2)])\n",
     "        \n",
     "        population = new_population\n",
     "    \n",
-    "    # Print the best solution found\n",
-    "    best_solution = max(population, key=fitness)\n",
-    "    print(\"\\nBest solution:\")\n",
-    "    print(visualize_individual(best_solution, fitness(best_solution)))\n",
-    "    print(\"Selected items:\", [ITEMS[i] for i, bit in enumerate(best_solution) if bit])\n",
-    "    print(\"Total value:\", fitness(best_solution))\n",
-    "    print(\"Total weight:\", sum(item[1] for item, bit in zip(ITEMS, best_solution) if bit))\n",
+    "    print(\"\\nFinal Population:\")\n",
+    "    for i, ind in enumerate(population):\n",
+    "        print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    genetic_algorithm()"
