--- a/ga/permutation-ga.ipynb
+++ b/ga/permutation-ga.ipynb
@@ -9,7 +9,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Problem: Traveling Salesman Problem\n",
+    "CITIES = [(0, 0), (1, 5), (2, 2), (3, 8), (5, 5), (6, 1), (8, 3)]\n",
+    "\n",
+    "POPULATION_SIZE = 6  # Smaller population for demonstration\n",
+    "GENERATIONS = 2\n",
+    "\n",
+    "def create_individual():\n",
+    "    \"\"\"\n",
+    "    Creates a random individual for the Traveling Salesman Problem.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: A permutation of city indices representing a tour.\n",
+    "    \"\"\"\n",
+    "    return random.sample(range(len(CITIES)), len(CITIES))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 0, 1, 6, 4, 5, 3]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_individual()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18,148 +62,68 @@
      "text": [
       "\n",
       "Generation 0:\n",
-      "Route: 2 -> 1 -> 3 -> 4 -> 5 -> 6 -> 0\n",
-      "│   2     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 1   3   │\n",
-      "│         │\n",
-      "│        5│\n",
-      "│  0      │\n",
-      "│      4  │\n",
-      "│6        │\n",
-      "Fitness: 0.034846\n",
+      "Individual 0: 1 -> 2 -> 0 -> 4 -> 5 -> 6 -> 3 Fitness: 0.032584\n",
+      "Individual 1: 5 -> 6 -> 0 -> 3 -> 2 -> 1 -> 4 Fitness: 0.026821\n",
+      "Individual 2: 3 -> 5 -> 0 -> 2 -> 4 -> 6 -> 1 Fitness: 0.028360\n",
+      "Individual 3: 2 -> 3 -> 1 -> 6 -> 4 -> 0 -> 5 Fitness: 0.026419\n",
+      "Individual 4: 5 -> 2 -> 1 -> 3 -> 0 -> 4 -> 6 Fitness: 0.030358\n",
+      "Individual 5: 5 -> 6 -> 2 -> 0 -> 1 -> 4 -> 3 Fitness: 0.031192\n",
       "\n",
-      "Generation 20:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Crossover and Mutation:\n",
       "\n",
-      "Generation 40:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 2 -> 3 -> 1 -> 6 -> 4 -> 0 -> 5 Fitness: 0.026419\n",
+      "Parent 2: 3 -> 5 -> 0 -> 2 -> 4 -> 6 -> 1 Fitness: 0.028360\n",
+      "Crossover range: 2 to 3\n",
+      "Child 1:  4 -> 6 -> 1 -> 3 -> 5 -> 0 -> 2 Fitness: 0.028360\n",
+      "Mutated: 4 -> 6 -> 1 -> 3 -> 5 -> 0 -> 2 Fitness: 0.028360\n",
       "\n",
-      "Generation 60:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 3 -> 5 -> 0 -> 2 -> 4 -> 6 -> 1 Fitness: 0.028360\n",
+      "Parent 2: 2 -> 3 -> 1 -> 6 -> 4 -> 0 -> 5 Fitness: 0.026419\n",
+      "Crossover range: 3 to 4\n",
+      "Child 1:  4 -> 0 -> 5 -> 2 -> 3 -> 1 -> 6 Fitness: 0.026419\n",
+      "Mutated: 4 -> 0 -> 5 -> 2 -> 3 -> 1 -> 6 Fitness: 0.026419\n",
       "\n",
-      "Generation 80:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 5 -> 2 -> 1 -> 3 -> 0 -> 4 -> 6 Fitness: 0.030358\n",
+      "Parent 2: 5 -> 6 -> 2 -> 0 -> 1 -> 4 -> 3 Fitness: 0.031192\n",
+      "Crossover range: 0 to 5\n",
+      "Child 1:  5 -> 2 -> 1 -> 3 -> 0 -> 6 -> 4 Fitness: 0.028005\n",
+      "Mutated: 5 -> 2 -> 1 -> 4 -> 0 -> 6 -> 3 Fitness: 0.024046\n",
       "\n",
-      "Generation 100:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Generation 1:\n",
+      "Individual 0: 4 -> 6 -> 1 -> 3 -> 5 -> 0 -> 2 Fitness: 0.028360\n",
+      "Individual 1: 1 -> 0 -> 5 -> 2 -> 4 -> 6 -> 3 Fitness: 0.029560\n",
+      "Individual 2: 4 -> 0 -> 5 -> 2 -> 3 -> 1 -> 6 Fitness: 0.026419\n",
+      "Individual 3: 2 -> 4 -> 1 -> 6 -> 3 -> 5 -> 0 Fitness: 0.025562\n",
+      "Individual 4: 5 -> 2 -> 1 -> 4 -> 0 -> 6 -> 3 Fitness: 0.024046\n",
+      "Individual 5: 5 -> 6 -> 2 -> 0 -> 1 -> 4 -> 3 Fitness: 0.031192\n",
       "\n",
-      "Generation 120:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Crossover and Mutation:\n",
       "\n",
-      "Generation 140:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 4 -> 6 -> 1 -> 3 -> 5 -> 0 -> 2 Fitness: 0.028360\n",
+      "Parent 2: 5 -> 2 -> 1 -> 4 -> 0 -> 6 -> 3 Fitness: 0.024046\n",
+      "Crossover range: 3 to 6\n",
+      "Child 1:  1 -> 4 -> 6 -> 3 -> 5 -> 0 -> 2 Fitness: 0.029099\n",
+      "Mutated: 1 -> 4 -> 6 -> 3 -> 5 -> 0 -> 2 Fitness: 0.029099\n",
       "\n",
-      "Generation 160:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 5 -> 2 -> 1 -> 4 -> 0 -> 6 -> 3 Fitness: 0.024046\n",
+      "Parent 2: 1 -> 0 -> 5 -> 2 -> 4 -> 6 -> 3 Fitness: 0.029560\n",
+      "Crossover range: 0 to 1\n",
+      "Child 1:  5 -> 1 -> 0 -> 2 -> 4 -> 6 -> 3 Fitness: 0.027126\n",
+      "Mutated: 5 -> 1 -> 3 -> 2 -> 4 -> 6 -> 0 Fitness: 0.025929\n",
       "\n",
-      "Generation 180:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
+      "Parent 1: 5 -> 6 -> 2 -> 0 -> 1 -> 4 -> 3 Fitness: 0.031192\n",
+      "Parent 2: 4 -> 6 -> 1 -> 3 -> 5 -> 0 -> 2 Fitness: 0.028360\n",
+      "Crossover range: 0 to 2\n",
+      "Child 1:  5 -> 6 -> 4 -> 1 -> 3 -> 0 -> 2 Fitness: 0.033858\n",
+      "Mutated: 5 -> 6 -> 4 -> 1 -> 3 -> 0 -> 2 Fitness: 0.033858\n",
       "\n",
-      "Best solution:\n",
-      "Route: 6 -> 5 -> 2 -> 0 -> 1 -> 3 -> 4\n",
-      "│   5     │\n",
-      "│         │\n",
-      "│         │\n",
-      "│ 4   6   │\n",
-      "│         │\n",
-      "│        0│\n",
-      "│  2      │\n",
-      "│      1  │\n",
-      "│3        │\n",
-      "Fitness: 0.038917\n",
-      "Total distance: 25.70\n"
+      "Final Population:\n",
+      "Individual 0: 1 -> 4 -> 6 -> 3 -> 5 -> 0 -> 2 Fitness: 0.029099\n",
+      "Individual 1: 1 -> 2 -> 5 -> 4 -> 0 -> 6 -> 3 Fitness: 0.026525\n",
+      "Individual 2: 5 -> 1 -> 3 -> 2 -> 4 -> 6 -> 0 Fitness: 0.025929\n",
+      "Individual 3: 1 -> 0 -> 5 -> 2 -> 4 -> 6 -> 3 Fitness: 0.029560\n",
+      "Individual 4: 5 -> 6 -> 4 -> 1 -> 3 -> 0 -> 2 Fitness: 0.033858\n",
+      "Individual 5: 6 -> 2 -> 1 -> 4 -> 3 -> 0 -> 5 Fitness: 0.029150\n"
      ]
     }
    ],
@@ -167,17 +131,33 @@
     "import random\n",
     "\n",
     "# Problem: Traveling Salesman Problem\n",
-    "# Cities: (x, y) coordinates\n",
     "CITIES = [(0, 0), (1, 5), (2, 2), (3, 8), (5, 5), (6, 1), (8, 3)]\n",
     "\n",
-    "# GA parameters\n",
-    "POPULATION_SIZE = 100\n",
-    "GENERATIONS = 200\n",
+    "POPULATION_SIZE = 6  # Smaller population for demonstration\n",
+    "GENERATIONS = 2\n",
     "\n",
     "def create_individual():\n",
+    "    \"\"\"\n",
+    "    Creates a random individual for the Traveling Salesman Problem.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: A permutation of city indices representing a tour.\n",
+    "    \"\"\"\n",
     "    return random.sample(range(len(CITIES)), len(CITIES))\n",
     "\n",
     "def fitness(individual):\n",
+    "    \"\"\"\n",
+    "    Calculates the fitness of an individual.\n",
+    "    \n",
+    "    The fitness is the inverse of the total distance of the tour.\n",
+    "    Shorter tours have higher fitness values.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): A permutation of city indices representing a tour.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: The inverse of the total distance of the tour.\n",
+    "    \"\"\"\n",
     "    total_distance = sum(\n",
     "        ((CITIES[individual[i]][0] - CITIES[individual[i-1]][0])**2 + \n",
     "         (CITIES[individual[i]][1] - CITIES[individual[i-1]][1])**2)**0.5\n",
@@ -186,6 +166,18 @@
     "    return 1 / total_distance\n",
     "\n",
     "def crossover(parent1, parent2):\n",
+    "    \"\"\"\n",
+    "    Performs Order Crossover (OX) between two parents.\n",
+    "    \n",
+    "    Args:\n",
+    "    parent1 (list): First parent's tour.\n",
+    "    parent2 (list): Second parent's tour.\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: A tuple containing:\n",
+    "           - The child resulting from the crossover (list)\n",
+    "           - The start and end indices of the crossover section (tuple)\n",
+    "    \"\"\"\n",
     "    start, end = sorted(random.sample(range(len(parent1)), 2))\n",
     "    child = [-1] * len(parent1)\n",
     "    child[start:end] = parent1[start:end]\n",
@@ -194,87 +186,74 @@
     "        if city not in child:\n",
     "            child[pointer] = city\n",
     "            pointer = (pointer + 1) % len(child)\n",
-    "    return child\n",
+    "    return child, (start, end)\n",
     "\n",
     "def mutate(individual):\n",
-    "    if random.random() < 0.02:\n",
+    "    \"\"\"\n",
+    "    Mutates an individual by swapping two cities.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): The tour to mutate.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: The mutated tour.\n",
+    "    \"\"\"\n",
+    "    if random.random() < 0.1:  # 10% mutation rate for demonstration\n",
     "        i, j = random.sample(range(len(individual)), 2)\n",
     "        individual[i], individual[j] = individual[j], individual[i]\n",
     "    return individual\n",
     "\n",
     "def visualize_individual(individual, fitness_value):\n",
     "    \"\"\"\n",
-    "    Create a visual representation of a permutation-based individual for the TSP.\n",
-    "    \n",
-    "    This function takes a permutation of cities and its fitness value, and returns\n",
-    "    a string that visually represents the route on a grid.\n",
+    "    Creates a string representation of an individual.\n",
     "    \n",
     "    Args:\n",
-    "    - individual (list): A permutation of city indices.\n",
-    "    - fitness_value (float): The fitness value of the individual (inverse of total distance).\n",
+    "    individual (list): A tour represented as a list of city indices.\n",
+    "    fitness_value (float): The fitness value of the individual.\n",
     "    \n",
     "    Returns:\n",
-    "    - str: A multi-line string representation of the route.\n",
-    "    \n",
-    "    Visual Representation:\n",
-    "    - The route is shown as a sequence of numbers on a grid.\n",
-    "    - Each number represents the order in which a city is visited.\n",
-    "    - The grid is framed with '│' characters.\n",
-    "    - The route sequence and fitness value are displayed below the grid.\n",
-    "    \n",
-    "    Example:\n",
-    "    For a route [0, 2, 1, 3] with fitness 0.1, part of the output might look like:\n",
-    "    │0  1│\n",
-    "    │ 2  │\n",
-    "    │3   │\n",
-    "    Route: 0 -> 2 -> 1 -> 3\n",
-    "    Fitness: 0.100000\n",
+    "    str: A string representation of the tour and its fitness.\n",
     "    \"\"\"\n",
-    "    max_x = max(city[0] for city in CITIES)\n",
-    "    max_y = max(city[1] for city in CITIES)\n",
-    "    grid = [[' ' for _ in range(max_x + 1)] for _ in range(max_y + 1)]\n",
-    "    \n",
-    "    # Place city numbers on the grid\n",
-    "    for i, city_index in enumerate(individual):\n",
-    "        x, y = CITIES[city_index]\n",
-    "        grid[y][x] = str(i)\n",
-    "    \n",
-    "    # Create the visual representation\n",
-    "    visual = \"Route: \" + \" -> \".join(map(str, individual)) + \"\\n\"\n",
-    "    for row in reversed(grid):\n",
-    "        visual += \"│\" + \"\".join(row) + \"│\\n\"\n",
-    "    visual += f\"Fitness: {fitness_value:.6f}\"\n",
-    "    return visual\n",
+    "    route = \" -> \".join(map(str, individual))\n",
+    "    return f\"{route} Fitness: {fitness_value:.6f}\"\n",
     "\n",
     "def genetic_algorithm():\n",
-    "    # Initialize population\n",
+    "    \"\"\"\n",
+    "    Runs the genetic algorithm for the Traveling Salesman Problem.\n",
+    "    \n",
+    "    This function initializes a population, evolves it over several generations,\n",
+    "    and prints the state of the population at each step.\n",
+    "    \"\"\"\n",
     "    population = [create_individual() for _ in range(POPULATION_SIZE)]\n",
     "    \n",
     "    for generation in range(GENERATIONS):\n",
-    "        # Sort population by fitness in descending order\n",
-    "        population = sorted(population, key=fitness, reverse=True)\n",
+    "        print(f\"\\nGeneration {generation}:\")\n",
+    "        for i, ind in enumerate(population):\n",
+    "            print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "        \n",
-    "        # Print the best individual every 20 generations\n",
-    "        if generation % 20 == 0:\n",
-    "            print(f\"\\nGeneration {generation}:\")\n",
-    "            print(visualize_individual(population[0], fitness(population[0])))\n",
+    "        new_population = []\n",
     "        \n",
-    "        # Create new population\n",
-    "        new_population = population[:2]  # Elitism: keep top 2 individuals\n",
-    "        \n",
-    "        while len(new_population) < POPULATION_SIZE:\n",
-    "            # Tournament selection\n",
-    "            parent1, parent2 = random.sample(population[:20], 2)\n",
-    "            child = mutate(crossover(parent1, parent2))\n",
-    "            new_population.append(child)\n",
+    "        print(\"\\nCrossover and Mutation:\")\n",
+    "        for i in range(0, POPULATION_SIZE, 2):\n",
+    "            parent1, parent2 = random.sample(population, 2)\n",
+    "            child1, (start, end) = crossover(parent1, parent2)\n",
+    "            child2, _ = crossover(parent2, parent1)\n",
+    "            \n",
+    "            print(f\"\\nParent 1: {visualize_individual(parent1, fitness(parent1))}\")\n",
+    "            print(f\"Parent 2: {visualize_individual(parent2, fitness(parent2))}\")\n",
+    "            print(f\"Crossover range: {start} to {end}\")\n",
+    "            print(f\"Child 1:  {visualize_individual(child1, fitness(child1))}\")\n",
+    "            \n",
+    "            mutated_child1 = mutate(child1)\n",
+    "            print(f\"Mutated: {visualize_individual(mutated_child1, fitness(mutated_child1))}\")\n",
+    "            \n",
+    "            new_population.extend([mutated_child1, mutate(child2)])\n",
     "        \n",
     "        population = new_population\n",
     "    \n",
-    "    # Print the best solution found\n",
-    "    best_solution = max(population, key=fitness)\n",
-    "    print(\"\\nBest solution:\")\n",
-    "    print(visualize_individual(best_solution, fitness(best_solution)))\n",
-    "    print(f\"Total distance: {1/fitness(best_solution):.2f}\")\n",
+    "    print(\"\\nFinal Population:\")\n",
+    "    for i, ind in enumerate(population):\n",
+    "        print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    genetic_algorithm()"
