--- a/ga/real-coded-ga.ipynb
+++ b/ga/real-coded-ga.ipynb
@@ -4,12 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Function Optimization with Visualization"
+    "### Function Optimization with GA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Problem: Maximize f(x, y) = -(x^2 + y^2) + 4\n",
+    "# Range for x and y: [-2, 2]\n",
+    "\n",
+    "POPULATION_SIZE = 6  # Smaller population for demonstration\n",
+    "GENERATIONS = 2\n",
+    "\n",
+    "def create_individual():\n",
+    "    \"\"\"\n",
+    "    Creates a random individual for the function optimization problem.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: A list of two float values representing x and y coordinates,\n",
+    "          each between -2 and 2.\n",
+    "    \"\"\"\n",
+    "    return [random.uniform(-2, 2) for _ in range(2)]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.835709115413537, -0.6143636706397047]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_individual()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18,227 +64,168 @@
      "text": [
       "\n",
       "Generation 0:\n",
-      "│                       X                 │\n",
-      "│                      Y                  │ Fitness: 3.8238\n",
-      "│                        X                │\n",
-      "│                    Y                    │ Fitness: 3.7916\n",
-      "│                         X               │\n",
-      "│                      Y                  │ Fitness: 3.6390\n",
-      "│              X                          │\n",
-      "│                Y                        │ Fitness: 3.5884\n",
-      "│                X                        │\n",
-      "│                           Y             │ Fitness: 3.3148\n",
+      "Individual 0: (x=-1.64, y=-1.70) Fitness: -1.5815\n",
+      "Individual 1: (x=-0.95, y=1.29) Fitness: 1.4431\n",
+      "Individual 2: (x=0.09, y=1.03) Fitness: 2.9398\n",
+      "Individual 3: (x=1.48, y=-1.65) Fitness: -0.9215\n",
+      "Individual 4: (x=0.44, y=-0.45) Fitness: 3.5962\n",
+      "Individual 5: (x=-0.44, y=0.43) Fitness: 3.6185\n",
       "\n",
-      "Generation 10:\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9998\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9993\n",
+      "Crossover and Mutation:\n",
       "\n",
-      "Generation 20:\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9997\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9993\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9990\n",
+      "Parent 1: (x=-1.64, y=-1.70) Fitness: -1.5815\n",
+      "Parent 2: (x=-0.44, y=0.43) Fitness: 3.6185\n",
+      "Crossover alpha: 0.02\n",
+      "Child 1:  (x=-0.46, y=0.39) Fitness: 3.6317\n",
+      "Mutated: (x=-0.46, y=0.26) Fitness: 3.7156\n",
       "\n",
-      "Generation 30:\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9999\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9998\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9990\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9986\n",
+      "Parent 1: (x=0.44, y=-0.45) Fitness: 3.5962\n",
+      "Parent 2: (x=0.09, y=1.03) Fitness: 2.9398\n",
+      "Crossover alpha: 0.27\n",
+      "Child 1:  (x=0.19, y=0.62) Fitness: 3.5804\n",
+      "Mutated: (x=0.05, y=0.62) Fitness: 3.6082\n",
       "\n",
-      "Generation 40:\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9999\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9985\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9975\n",
+      "Parent 1: (x=-0.44, y=0.43) Fitness: 3.6185\n",
+      "Parent 2: (x=-0.95, y=1.29) Fitness: 1.4431\n",
+      "Crossover alpha: 0.52\n",
+      "Child 1:  (x=-0.68, y=0.85) Fitness: 2.8169\n",
+      "Mutated: (x=-0.76, y=0.83) Fitness: 2.7264\n",
       "\n",
-      "Generation 50:\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9999\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9997\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9993\n",
+      "Generation 1:\n",
+      "Individual 0: (x=-0.46, y=0.26) Fitness: 3.7156\n",
+      "Individual 1: (x=-0.64, y=0.03) Fitness: 3.5904\n",
+      "Individual 2: (x=0.05, y=0.62) Fitness: 3.6082\n",
+      "Individual 3: (x=0.09, y=0.65) Fitness: 3.5751\n",
+      "Individual 4: (x=-0.76, y=0.83) Fitness: 2.7264\n",
+      "Individual 5: (x=-0.42, y=0.64) Fitness: 3.4237\n",
       "\n",
-      "Generation 60:\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 4.0000\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9998\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9998\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 3.9998\n",
+      "Crossover and Mutation:\n",
       "\n",
-      "Generation 70:\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 4.0000\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9978\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9970\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9952\n",
+      "Parent 1: (x=-0.42, y=0.64) Fitness: 3.4237\n",
+      "Parent 2: (x=-0.46, y=0.26) Fitness: 3.7156\n",
+      "Crossover alpha: 0.61\n",
+      "Child 1:  (x=-0.43, y=0.49) Fitness: 3.5713\n",
+      "Mutated: (x=-0.32, y=0.44) Fitness: 3.7052\n",
       "\n",
-      "Generation 80:\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 4.0000\n",
-      "│                   X                     │\n",
-      "│                    Y                    │ Fitness: 3.9986\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9982\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9974\n",
+      "Parent 1: (x=-0.46, y=0.26) Fitness: 3.7156\n",
+      "Parent 2: (x=-0.76, y=0.83) Fitness: 2.7264\n",
+      "Crossover alpha: 0.18\n",
+      "Child 1:  (x=-0.71, y=0.73) Fitness: 2.9611\n",
+      "Mutated: (x=-0.59, y=0.84) Fitness: 2.9483\n",
       "\n",
-      "Generation 90:\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 4.0000\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9983\n",
-      "│                   X                     │\n",
-      "│                   Y                     │ Fitness: 3.9957\n",
-      "│                    X                    │\n",
-      "│                    Y                    │ Fitness: 3.9953\n",
+      "Parent 1: (x=-0.42, y=0.64) Fitness: 3.4237\n",
+      "Parent 2: (x=-0.64, y=0.03) Fitness: 3.5904\n",
+      "Crossover alpha: 0.48\n",
+      "Child 1:  (x=-0.53, y=0.32) Fitness: 3.6138\n",
+      "Mutated: (x=-0.41, y=0.25) Fitness: 3.7684\n",
       "\n",
-      "Best solution:\n",
-      "│                    X                    │\n",
-      "│                   Y                     │ Fitness: 4.0000\n",
-      "x = 0.0000, y = -0.0031\n",
-      "f(x, y) = 4.0000\n"
+      "Final Population:\n",
+      "Individual 0: (x=-0.32, y=0.44) Fitness: 3.7052\n",
+      "Individual 1: (x=-0.49, y=0.35) Fitness: 3.6390\n",
+      "Individual 2: (x=-0.59, y=0.84) Fitness: 2.9483\n",
+      "Individual 3: (x=-0.50, y=0.27) Fitness: 3.6747\n",
+      "Individual 4: (x=-0.41, y=0.25) Fitness: 3.7684\n",
+      "Individual 5: (x=-0.65, y=0.17) Fitness: 3.5454\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "\n",
-    "# Problem: Maximize f(x, y) = -(x^2 + y^2) + 4\n",
-    "# Range for x and y: [-2, 2]\n",
-    "\n",
-    "# GA parameters\n",
-    "POPULATION_SIZE = 50\n",
-    "GENERATIONS = 100\n",
-    "\n",
-    "def create_individual():\n",
-    "    return [random.uniform(-2, 2) for _ in range(2)]\n",
-    "\n",
     "def fitness(individual):\n",
+    "    \"\"\"\n",
+    "    Calculates the fitness of an individual.\n",
+    "    \n",
+    "    The fitness is the value of the function f(x, y) = -(x^2 + y^2) + 4.\n",
+    "    Higher values indicate better fitness.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): A list containing x and y values.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: The value of f(x, y) for the given individual.\n",
+    "    \"\"\"\n",
     "    x, y = individual\n",
     "    return -(x**2 + y**2) + 4\n",
     "\n",
     "def crossover(parent1, parent2):\n",
+    "    \"\"\"\n",
+    "    Performs arithmetic crossover between two parents.\n",
+    "    \n",
+    "    Args:\n",
+    "    parent1 (list): First parent's x and y values.\n",
+    "    parent2 (list): Second parent's x and y values.\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: A tuple containing:\n",
+    "           - The child resulting from the crossover (list)\n",
+    "           - The alpha value used for crossover (float)\n",
+    "    \"\"\"\n",
     "    alpha = random.random()\n",
-    "    return [alpha * p1 + (1 - alpha) * p2 for p1, p2 in zip(parent1, parent2)]\n",
+    "    child = [alpha * p1 + (1 - alpha) * p2 for p1, p2 in zip(parent1, parent2)]\n",
+    "    return child, alpha\n",
     "\n",
     "def mutate(individual):\n",
+    "    \"\"\"\n",
+    "    Mutates an individual by adding small random values to each gene.\n",
+    "    \n",
+    "    Args:\n",
+    "    individual (list): The x and y values to mutate.\n",
+    "    \n",
+    "    Returns:\n",
+    "    list: The mutated individual.\n",
+    "    \"\"\"\n",
     "    return [gene + random.gauss(0, 0.1) for gene in individual]\n",
     "\n",
     "def visualize_individual(individual, fitness_value):\n",
     "    \"\"\"\n",
-    "    Create a visual representation of a real-coded individual.\n",
-    "    \n",
-    "    This function takes a real-coded individual (a list of two float values representing x and y)\n",
-    "    and its fitness value, and returns a string that visually represents the individual.\n",
+    "    Creates a string representation of an individual.\n",
     "    \n",
     "    Args:\n",
-    "    - individual (list): A list of two float values [x, y].\n",
-    "    - fitness_value (float): The fitness value of the individual.\n",
+    "    individual (list): The x and y values of an individual.\n",
+    "    fitness_value (float): The fitness value of the individual.\n",
     "    \n",
     "    Returns:\n",
-    "    - str: A multi-line string representation of the individual.\n",
-    "    \n",
-    "    Visual Representation:\n",
-    "    - Two lines representing x and y axes, each 42 characters wide (including '│' borders).\n",
-    "    - 'X' and 'Y' markers show the position of x and y values on their respective axes.\n",
-    "    - The fitness value is appended at the end.\n",
-    "    \n",
-    "    Example:\n",
-    "    For individual [1.5, -0.5] with fitness 3.5, the output might be:\n",
-    "    │                    X                     │\n",
-    "    │               Y                          │ Fitness: 3.5000\n",
+    "    str: A string representation of the individual and its fitness.\n",
     "    \"\"\"\n",
     "    x, y = individual\n",
-    "    # Scale x and y from [-2, 2] to [0, 40]\n",
-    "    x_visual = int((x + 2) * 10)\n",
-    "    y_visual = int((y + 2) * 10)\n",
-    "    \n",
-    "    # Create x-axis visualization\n",
-    "    x_line = \"│\" + \" \" * x_visual + \"X\" + \" \" * (40 - x_visual) + \"│\\n\"\n",
-    "    \n",
-    "    # Create y-axis visualization\n",
-    "    y_line = \"│\" + \" \" * y_visual + \"Y\" + \" \" * (40 - y_visual) + \"│\"\n",
-    "    \n",
-    "    # Combine both lines and add fitness value\n",
-    "    visual = x_line + y_line + f\" Fitness: {fitness_value:.4f}\"\n",
-    "    return visual\n",
+    "    return f\"(x={x:.2f}, y={y:.2f}) Fitness: {fitness_value:.4f}\"\n",
     "\n",
     "def genetic_algorithm():\n",
-    "    # Initialize population\n",
+    "    \"\"\"\n",
+    "    Runs the genetic algorithm for function optimization.\n",
+    "    \n",
+    "    This function initializes a population, evolves it over several generations,\n",
+    "    and prints the state of the population at each step.\n",
+    "    \"\"\"\n",
     "    population = [create_individual() for _ in range(POPULATION_SIZE)]\n",
     "    \n",
     "    for generation in range(GENERATIONS):\n",
-    "        # Sort population by fitness in descending order\n",
-    "        population = sorted(population, key=fitness, reverse=True)\n",
+    "        print(f\"\\nGeneration {generation}:\")\n",
+    "        for i, ind in enumerate(population):\n",
+    "            print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "        \n",
-    "        # Print the top 5 individuals every 10 generations\n",
-    "        if generation % 10 == 0:\n",
-    "            print(f\"\\nGeneration {generation}:\")\n",
-    "            for i in range(5):\n",
-    "                print(visualize_individual(population[i], fitness(population[i])))\n",
+    "        new_population = []\n",
     "        \n",
-    "        # Create new population\n",
-    "        new_population = population[:2]  # Elitism: keep top 2 individuals\n",
-    "        \n",
-    "        while len(new_population) < POPULATION_SIZE:\n",
-    "            # Tournament selection\n",
-    "            parent1, parent2 = random.sample(population[:20], 2)\n",
-    "            child = mutate(crossover(parent1, parent2))\n",
-    "            new_population.append(child)\n",
+    "        print(\"\\nCrossover and Mutation:\")\n",
+    "        for i in range(0, POPULATION_SIZE, 2):\n",
+    "            parent1, parent2 = random.sample(population, 2)\n",
+    "            child1, alpha = crossover(parent1, parent2)\n",
+    "            child2, _ = crossover(parent2, parent1)\n",
+    "            \n",
+    "            print(f\"\\nParent 1: {visualize_individual(parent1, fitness(parent1))}\")\n",
+    "            print(f\"Parent 2: {visualize_individual(parent2, fitness(parent2))}\")\n",
+    "            print(f\"Crossover alpha: {alpha:.2f}\")\n",
+    "            print(f\"Child 1:  {visualize_individual(child1, fitness(child1))}\")\n",
+    "            \n",
+    "            mutated_child1 = mutate(child1)\n",
+    "            print(f\"Mutated: {visualize_individual(mutated_child1, fitness(mutated_child1))}\")\n",
+    "            \n",
+    "            new_population.extend([mutated_child1, mutate(child2)])\n",
     "        \n",
     "        population = new_population\n",
     "    \n",
-    "    # Print the best solution found\n",
-    "    best_solution = max(population, key=fitness)\n",
-    "    print(\"\\nBest solution:\")\n",
-    "    print(visualize_individual(best_solution, fitness(best_solution)))\n",
-    "    print(f\"x = {best_solution[0]:.4f}, y = {best_solution[1]:.4f}\")\n",
-    "    print(f\"f(x, y) = {fitness(best_solution):.4f}\")\n",
+    "    print(\"\\nFinal Population:\")\n",
+    "    for i, ind in enumerate(population):\n",
+    "        print(f\"Individual {i}: {visualize_individual(ind, fitness(ind))}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    genetic_algorithm()"
