--- a/week 3/vega.ipynb
+++ b/week 3/vega.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,16 @@
     "        Initialize the VEGA.\n",
     "\n",
     "        Args:\n",
-    "            pop_size (int): Size of the population.\n",
+    "            pop_size (int): Size of the population. Should be divisible by num_objectives.\n",
     "            num_objectives (int): Number of objectives to optimize.\n",
     "            gene_size (int): Number of genes in each individual.\n",
     "            crossover_rate (float): Probability of crossover occurring.\n",
     "            mutation_rate (float): Probability of mutation for each gene.\n",
     "        \"\"\"\n",
+    "        assert pop_size % num_objectives == 0, \"Population size should be divisible by number of objectives\"\n",
     "        self.pop_size = pop_size\n",
     "        self.num_objectives = num_objectives\n",
+    "        self.subpop_size = pop_size // num_objectives\n",
     "        self.gene_size = gene_size\n",
     "        self.crossover_rate = crossover_rate\n",
     "        self.mutation_rate = mutation_rate\n",
@@ -56,18 +58,24 @@
     "        \"\"\"\n",
     "        return [np.sum(individual) for _ in range(self.num_objectives)]\n",
     "\n",
-    "    def select_parents(self, subpopulation: np.ndarray) -> Tuple[np.ndarray, np.ndarray]:\n",
+    "    def vega_selection(self, fitness_values: np.ndarray) -> np.ndarray:\n",
     "        \"\"\"\n",
-    "        Select two parents from a subpopulation for reproduction.\n",
+    "        Perform VEGA selection by creating sub-populations based on each objective.\n",
     "\n",
     "        Args:\n",
-    "            subpopulation (np.ndarray): The subpopulation to select from.\n",
+    "            fitness_values (np.ndarray): Fitness values for the entire population.\n",
     "\n",
     "        Returns:\n",
-    "            Tuple[np.ndarray, np.ndarray]: Two selected parent individuals.\n",
+    "            np.ndarray: Combined selected individuals from all sub-populations.\n",
     "        \"\"\"\n",
-    "        idx1, idx2 = np.random.choice(len(subpopulation), 2, replace=False)\n",
-    "        return subpopulation[idx1], subpopulation[idx2]\n",
+    "        selected_indices = []\n",
+    "\n",
+    "        for obj in range(self.num_objectives):\n",
+    "            # Sort based on the current objective\n",
+    "            obj_indices = np.argsort(fitness_values[:, obj])[:self.subpop_size]\n",
+    "            selected_indices.extend(obj_indices)\n",
+    "\n",
+    "        return self.population[selected_indices]\n",
     "\n",
     "    def crossover(self, parent1: np.ndarray, parent2: np.ndarray) -> np.ndarray:\n",
     "        \"\"\"\n",
@@ -101,7 +109,7 @@
     "        individual[mutation_mask] = np.random.rand(np.sum(mutation_mask))\n",
     "        return individual\n",
     "\n",
-    "    def run(self, generations: int) -> List[np.ndarray]:\n",
+    "    def run(self, generations: int) -> np.ndarray:\n",
     "        \"\"\"\n",
     "        Run the VEGA for a specified number of generations.\n",
     "\n",
@@ -109,57 +117,43 @@
     "            generations (int): Number of generations to run.\n",
     "\n",
     "        Returns:\n",
-    "            List[np.ndarray]: The final Pareto front.\n",
+    "            np.ndarray: The final population.\n",
     "        \"\"\"\n",
     "        for _ in range(generations):\n",
     "            fitness_values = np.array([self.evaluate_fitness(ind) for ind in self.population])\n",
-    "            new_population = []\n",
     "            \n",
-    "            for obj in range(self.num_objectives):\n",
-    "                subpop_size = self.pop_size // self.num_objectives\n",
-    "                subpopulation = self.population[np.argsort(fitness_values[:, obj])[-subpop_size:]]\n",
-    "                \n",
-    "                for _ in range(subpop_size):\n",
-    "                    parent1, parent2 = self.select_parents(subpopulation)\n",
-    "                    child = self.crossover(parent1, parent2)\n",
-    "                    child = self.mutate(child)\n",
-    "                    new_population.append(child)\n",
+    "            # Perform VEGA selection\n",
+    "            selected_population = self.vega_selection(fitness_values)\n",
+    "            \n",
+    "            # Create new population through crossover and mutation\n",
+    "            new_population = []\n",
+    "            while len(new_population) < self.pop_size:\n",
+    "                parent_indices = np.random.choice(len(selected_population), 2, replace=False)\n",
+    "                parent1, parent2 = selected_population[parent_indices]\n",
+    "                child = self.crossover(parent1, parent2)\n",
+    "                child = self.mutate(child)\n",
+    "                new_population.append(child)\n",
     "            \n",
     "            self.population = np.array(new_population)\n",
     "        \n",
-    "        return self.get_pareto_front()\n",
-    "\n",
-    "    def get_pareto_front(self) -> List[np.ndarray]:\n",
-    "        \"\"\"\n",
-    "        Get the Pareto front from the current population.\n",
-    "        This method is added to VEGA to extract Pareto-optimal solutions at the end of the run.\n",
-    "\n",
-    "        Returns:\n",
-    "            List[np.ndarray]: The Pareto front (non-dominated solutions).\n",
-    "        \"\"\"\n",
-    "        fitness_values = np.array([self.evaluate_fitness(ind) for ind in self.population])\n",
-    "        pareto_front = []\n",
-    "        for i, fitness in enumerate(fitness_values):\n",
-    "            if np.all(np.any(fitness_values >= fitness, axis=1)):\n",
-    "                pareto_front.append(self.population[i])\n",
-    "        return pareto_front\n",
+    "        return self.population\n",
     "\n",
     "# Usage example\n",
     "vega = VEGA(pop_size=100, num_objectives=2, gene_size=10, crossover_rate=0.8, mutation_rate=0.1)\n",
-    "pareto_front = vega.run(generations=50)\n"
+    "final_population = vega.run(generations=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.19264033 0.33327199 0.07978781 0.49665193 0.18044357 0.15914277\n",
-      " 0.1142943  0.79329286 0.39675815 0.92881043]\n"
+      "[0.29711776 0.06874323 0.09317056 0.58317227 0.77200254 0.75330566\n",
+      " 0.59441791 0.12298709 0.41417076 0.52118714]\n"
      ]
     }
    ],
